--- a/index.css
+++ b/index.css
@@ -18,5 +18,18 @@ section{
     background-image:url("./images/Linkd\ in\ profile\ .png");
     background-repeat: no-repeat;
     background-size: cover;
-
 }
+
+nav{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    height: 60px;
+    background-color: #ffffff;
+    box-shadow:2px 2px 12px rgba(0,0,0,0,2);
+    padding:0px 5%;
+}
+nav ul{
+    display: flex;
+}
+nav
