--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@
     /*  CSS Document */
 
 body{
-    background-color: grey;
+    background-color: #f6f5f5;
     margin: 0px;
     padding:0px;
-
 }
+
 ul{
     list-style: none;
 }
@@ -14,19 +14,19 @@ a{
     text-decoration: none;
 }
 section{
-    width: 100%;
-    height: 95vh;
+    width:100%;
+    height:95vh;
     background-image:url("./images/Linkd\ in\ profile\ .png");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat:no-repeat;
+    background-size:cover;
 }
 
 nav{
     display:flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items:center;
-    height: 60px;
-    background-color: #ffffff;
+    height:60px;
+    background-color:#FFFFFF;
     box-shadow:2px 2px 12px rgba(0,0,0,0,2);
     padding:0px 5%;
 }
@@ -49,4 +49,17 @@ nav ul li a{
     font-weight:bold;
     color: #2d2a2a;
 }
+.text-container p:nth-child(1){
+   font-family:calibri;
+   font-weight: bold;
+   color: #6d6d6d;
+   font-size: 22px;
+}
+.text-container p:nth-child(2){
+    font-family:Calibri;
+    font-weight: bold;
+    letter-spacing:1px;
+    color:#1a1a1a;
+    font-size:60px;
 
+}
