--- a/css/style.css
+++ b/css/style.css
@@ -97,5 +97,19 @@ nav ul li a{
 button:active{
     transform:scale(1.1);
 }
+.model{
+    height:350px;
+    position: absolute;
+    bottom:0px;
+    left:50%;
+    transform:translate(-70%);
+}
+.about-container{
+    width:80%;
+    height:330px;
+    background-color:#FFFFFF;
+    border-radius:20px;
+    box-shadow:2px 12px rgba(0,0,0,0,2);
+}
 
 
