--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ nav ul{
     display: flex;
 }
 nav ul li a{
-    margin:30px;
+    margin:15px;
     font-family: helvetica;
     color: #505050;
     font-size:15px;
@@ -99,9 +99,9 @@ button:active{
 }
 .model{
     height:350px;
-    position: absolute;
-    bottom:0px;
-    left:50%;
+    position:absolute;
+    bottom:40px;
+    left:55%;
     transform:translate(-70%);
 }
 .about-container{
@@ -110,6 +110,148 @@ button:active{
     background-color:#FFFFFF;
     border-radius:20px;
     box-shadow:2px 12px rgba(0,0,0,0,2);
+    display: flex;
+    margin:-7% auto 20px auto;
+    position:relative;
+    justify-content:space-evenly;
+    align-items:center;
 }
+.about-container img{
+    height:250px;
+}
+.about-text{
+    width:550px;
+}
+.about-text p:nth-child(1){
+    color:#403e3e;
+    font-family:myriad pro;
+    font-weight:bold;
+    font-size:23px;
+    list-style: height 0px;
+}
+.about-text p:nth-child(2),
+.about-text p:nth-child(3){
+   color:#383d3d;
+   font-size:13px;
+   font-family:myriad pro;
+   line-height:5px;
+}
+.about-text p:nth-child(4),
+.about-text p:nth-child(5),
+.about-text p:nth-child(6),
+.about-text p:nth-child(7){
+    color:#7e7d7d;
+    font-family:calibri;
+    font-size:16px;
+}
+
+.about-text button{
+    width:120px;
+    height:40px;
+    color:#FFFFFF;
+    outline:none;
+    border:none;
+    font-family:calibri;
+    background-color:#262525;
+}
+.services{
+    height:600px;
+    background-color:#FFFFFF;
+    padding:2% 10% 0px 10%;
+
+}
+.services-text p:nth-child(1){
+    font-family:calibri;
+    font-weight:bold;
+    color:#3e3d3d;
+    font-size:30px;
+    line-height:0px;
+}
+.services-text p:nth-child(2){
+    font-family:calibri;
+    font-weight:bold;
+    color:#3e3e3d;
+    font-size:15px;
+    line-height:5px;
+}
+.services-text p:nth-child(3){
+    font-family:calibri;
+    color:#7e7d7d;
+}
+.services-text p:nth-child(4){
+    font-family:calibri;
+    color:#7e7d7d;
+}
+.services-text{
+    width:500px;
+    margin:50px 0px;
+}
+.box-1, .box-2, .box-3{
+    width:300px;
+    height:320px;
+    background-repeat:no-repeat;
+    background-size:cover;
+    box-shadow:2px 2px 12px rgba(0,0,0,0.3);
+    display: flex;
+    justify-content: center;
+    align-items:center ;
+    flex-direction:column;
+}
+.box-container{
+    display:flex;
+    justify-content:space-between;
+}
+.box-1{
+    background-image: url("../images/black.jpg");
+}
+.box-2{
+    background-image: url("../images/black.jpg"); 
+  
+}
+.box-3{
+    background-image: url("../images/black.jpg");
+  
+}
+.box-1 span,
+.box-2 span,
+.box-3 span{
+    width:40px;
+    height:40px;
+    border-radius: 50%;
+    background-color:#FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family:calibri;
+    font-weight:bold;
+}
+.box-1 p:nth-child(2),
+.box-2 p:nth-child(2),
+.box-3 p:nth-child(2){
+    color:#FFFFFF;
+    font-family:calibri;
+    font-size:23px;
+    line-height:0px;
+}
+.box-1 p:nth-child(3),
+.box-2 p:nth-child(3),
+.box-3 p:nth-child(3){
+    font-family:calibri;
+    text-align: center;
+    width:230px;
+    margin:0px 0px 20px 0px;
+    color:#8f8f8f;
+}
+.box-1 button,
+.box-2 button,
+.box-3 button{
+    width:100px;
+    height:30px;
+    background-color:#FFFFFF;
+    border:none;
+    outline:none;
+    border-radius:5px;
+}
+
 
 
